# git-tailor

./: AGENTS.md  Cargo.toml  LICENSE  NOTICE  TASKS-COMPLETED.md  TASKS.md  explanation_of_split.txt
.github/prompts/: implement-task.prompt.md
.github/workflows/: rust.yml
examples/: dump_fragmap.rs
src/: app.rs  editor.rs  event.rs  fragmap.rs  lib.rs  main.rs  mergetool.rs  repo.rs  views.rs
src/fragmap/: spg.rs
src/repo/: editor.rs  git2_impl.rs
src/views/: commit_detail.rs  commit_list.rs  conflict.rs  dialog.rs  drop.rs  help.rs  move_select.rs  split_select.rs  squash_select.rs
tests/: commit_diff.rs  common.rs  drop_commit.rs  list_commits.rs  mergetool.rs  move_commit.rs  reference_point.rs  split_commit.rs  squash_commit.rs  tui_commit_list.rs  tui_drop_confirm.rs  tui_fragmap.rs  tui_move_select.rs  tui_snapshots.rs  tui_split_select.rs  tui_squash_select.rs
tests/snapshots/: tui_commit_list__commit_list_empty.snap  tui_commit_list__commit_list_long_summary.snap  tui_commit_list__commit_list_reversed_scrolled.snap  tui_commit_list__commit_list_reversed_with_commits.snap  tui_commit_list__commit_list_scrolled_to_bottom.snap  tui_commit_list__commit_list_scrolled_to_top.snap  tui_commit_list__commit_list_with_commits.snap  tui_commit_list__commit_list_with_selection.snap  tui_commit_list__status_bar_long_error.snap  tui_commit_list__status_bar_short_error.snap  tui_drop_confirm__drop_confirm_dialog.snap  tui_drop_confirm__drop_confirm_dialog_long_summary.snap  tui_drop_confirm__drop_confirm_dialog_narrow_terminal.snap  (+44 more)
