[package]
name = "git-tailor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.20", default-features = false }
anyhow = "1.0"
ratatui = "0.28"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"
insta = "1"
