[package]
name = "git-scissors"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
git2 = "0.20"
anyhow = "1.0"
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"
insta = "1"
