[package]
name = "git-tailor"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.20", default-features = false }
anyhow = "1.0"
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", default-features = false, features = ["std", "derive", "wrap_help", "help", "usage", "error-context", "suggestions"] }
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }
tempfile = "3"

[dev-dependencies]
insta = "1"
